--- a/devops.yml
+++ b/devops.yml
@@ -2,7 +2,7 @@
 
   - hosts: local
     connections: local
-    become: yes
+    become:yes
     become_method: sudo
      
     - name: permission to "devopsdocker" docker bind directory
@@ -26,11 +26,11 @@
           owner=nginx
           group=nginx
           mode=7777
-	- name: edit index.html file
+    - name: edit index.html file
       blockinfile:
           path:/var/www/devopsdocker/index.html
-		  block: |
-		      <html>
+          block: |
+              <html>
               <head>
               <title>dvops-test-Nginx</title>
               </head>
@@ -38,7 +38,7 @@
               <h1>CFR DevOps test-Nginx</h1>
               </body>
               </html>
-	- name: create index.php page
+    - name: create index.php page
       file:
           path=/var/www/devopsdocker/index.php
           state=touch
@@ -48,64 +48,44 @@
     - name: edit index.php 
       blockinfile:
           path:/var/www/devopsdocker/index.php
-		  block: |
-		      <?php
+          block: |
+              <?php
               phpinfo();
-			  ?>
-#	- name: edit nginx.conf file
-#	  blockinfile:
-#         path: /etc/nginx/conf.d/virtual.conf
-#             server {
-#             listen       80 default_server;
-#             listen       [::]:80 default_server;
-#             server_name  _;
-#             root         /usr/share/nginx/html;
-#
-#             # Load configuration files for the default server block.
-#             include /etc/nginx/default.d/*.conf;
-
-#             location / {
-#             }
-
-#             error_page 404 /404.html;
-#             location = /40x.html {
-#             }
-
-#             error_page 500 502 503 504 /50x.html;
-#             location = /50x.html {
-#             }
-#             }
-
-	- name: create nginx conf file
-	  file:
-	      path=	/etc/nginx/conf.d/virtual.conf
+              ?>
+    - name: create nginx conf file
+      file:
+          path=/etc/nginx/conf.d/virtual.conf
           state=touch
           owner=nginx
           group=nginx
           mode=7777  
     - name: Edit nginx conf.
       blockinfile:
-	      path: /etc/nginx/conf.d/virtual.conf
-		  block: |
+      path: /etc/nginx/conf.d/virtual.conf
+      block: |
               server {
               listen 80;
               root /var/www/devopsdocker; 
-              index index.php index.html index.htm;
-              server_name www.devopsdocker.com devopsdocker.com;
-              location ~* \.(jpg|css|png|js)$ {
-              try_files $uri $uri $uri $uri/ /index.php;
-              }
-              location ~ \.php$ {
+              index index.html index.htm;
+              server_name devopsdocker;
+              
+              location \ {
               proxy_set_header X-Real-IP $remote_addr;
               proxy_set_header X-Forwarded-For $remote_addr;
               proxy_set_header Host $host;
               proxy_pass http://127.0.0.1:8080;
               }
+              
+              location \ {
+              if ($request_filename = [gif|jpg|png])
+              {return http://www.devopsdocker.com/index.html;
+               }
+
               location ~ /\.ht {
               deny all;
               }
               }
-	- name: Change apache listen port 
+    - name: Change apache listen port 
       lineinfile:
           path: /etc/httpd/conf/httpd.conf
           regexp: 'Listen 80'
@@ -120,7 +100,7 @@
             ServerName devopsdocker.com
             ServerAlias devopsdocker
             </VirtualHost>
-	- name: restart services
+    - name: restart services
       service: name={{item}} state=started
       with_items: 
         - httpd
@@ -129,9 +109,4 @@
       service: name={{item}} enabled=yes
       with_items:
         - httpd
-        - nginx		
-			
-		  
-		  
-
-			
+        - nginx	
