--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -68,13 +68,14 @@
               root /var/www/devopsdocker; 
               index index.html index.htm;
               server_name devopsdocker;
+              return 443 https://www.devopsdocker.com/index.html;
               
-              location \ {
-              proxy_set_header X-Real-IP $remote_addr;
-              proxy_set_header X-Forwarded-For $remote_addr;
-              proxy_set_header Host $host;
-              proxy_pass http://127.0.0.1:8080;
-              }
+              #location \ {
+              #proxy_set_header X-Real-IP $remote_addr;
+              #proxy_set_header X-Forwarded-For $remote_addr;
+              #proxy_set_header Host $host;
+              #proxy_pass http://127.0.0.1:8080;
+              #}
               
               location \ {
               if ($request_filename = [gif|jpg|png])
