--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - image: circleci/node:9.6.1
     steps:
       - checkout
-#      - run: echo "Hello World"
+      - run: echo "CircleCI test"
       - sayhello:
           to: "Pantheon Deploy"
 
